--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,9 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    /* Manually Added values*/
+    --top-bar-height: 4rem;
+    --chat-input-height: 4.5rem;
   }
   .dark {
     --background: 0 0% 3.9%;
