BC-255 onboarding upgrade (#45)
* Shell of onboarding flow

* WIP: fill in behaviour of onboarding steps

* Use new ui element for onboarding

* Working onboaring flow

* Factor out db interactions to service

* Trigger onboarding when trying to add from tab bar

* Track progress in onboarding with posthog

* Trigger onboarding on collection page and with timer

* Fix colors in import step

* Fix style of info screen

* WIP: cancelling import modal

* Fix job creation bug

* Fix import animation

* Short timeout on collection page

* Add progress to onboarding

* Update success screen

* Trigger when going back from recipe

* Adjust z-indices

* Fix onboarding trigger

* Clear up unused pages and components

* Associate during auth-callback

* Remove clutter from success screen

* Fix table rename artefacts

---------

Co-authored-by: Aron Hammond <aron.hammond@persgroep.net>

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,12 @@
     --color-status-red-bg: #fce7e7;
     --color-status-red-text: #8f1d1d;
     --color-status-red-border: #f5b5b5;
+    --color-status-orange-0: #f96a25;
+    --color-status-orange-bg: #fef7ee;
+    --color-status-orange-border: #fcf3e4;
+    --color-status-purple-0: #9d5def;
+    --color-status-purple-bg: #f9f5fe;
+    --color-status-purple-border: #f5effd;
 
     /* 3. Border Radius */
     --radius-lg: 8px;
